# isolappurr-usb-hub

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  DESIGN.md  Justfile  PRODUCT.md  README.md  build.rs  commitlint.config.cjs  lefthook.yml  mcu-agentd.toml  package.json
.cargo/: config.toml
.github/: quality-gates.json
.github/scripts/: release_intent.py  release_workflow.py  test_build_web_bundle.py  test_label_gate_contract.py  test_pwa_contracts.py  test_quality_gates_contract.py  test_release_intent.py  test_release_pages_contracts.py  test_release_workflow.py  test_skill_contracts.py  test_workflow_toolchain_contracts.py
.github/workflows/: ci.yml  dependency-review.yml  desktop.yml  firmware.yml  host-tools.yml  label-gate.yml  lint-pr-title.yml  notify-release-failure.yml  pages.yml  release.yml  repo-contracts.yml
crates/isolapurr-firmware-core/: Cargo.toml
crates/isolapurr-firmware-core/src/: display_ui.rs  lib.rs  pd_i2c.rs  power_config.rs  provisioning.rs  telemetry.rs  thermal.rs
desktop/: README.md
desktop/.cargo/: config.toml
desktop/scripts/: tauri-before-build.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/app/: agent_server.rs  cli.rs  discovery.rs  discovery_api.rs  http_error.rs  serial_firmware.rs  storage.rs  storage_routes.rs
docs/: buzzer-prompt-tones-design.md  ch217-upstream-vbus-protection.md  ecmf02-2amx6-usb2-wiring.md  esp32c3-usbpd-i2c-feasibility.md  esp32s3fh4r2-usbpd-i2c-feasibility.md  gc9307-normal-ui-functional.md  gc9307-normal-ui-ui-design.md  gc9307-telemetry-design.md  hardware-variants.md  hw-button-action-tones-design.md  local-usb-host-tools.md  lt4532b-351mgn-transformer-selection.md  maintainer-workflow.md  mcu-pin-assignment-tps-fusb.md  mcu-pin-assignment-tps-sw.md  mcu-resource-allocation-tps-fusb.md  mcu-resource-allocation-tps-sw.md  networking.md  pd-i2c-coordinator-design.md  sw2303-init-enable-profile.md  tps-fusb-hardware-design.md  tps-fusb-input-power-path-selection.md  tps55288-uvlo-en-divider.md  tps62933-uvlo-en-divider.md  tvs0500-vbus-protection.md  urb2405s-3wr3-usb-feasibility.md  web-ui-interaction-spec.md  web-ui-visual-spec.md
docs/datasheets/: ch217-datasheet.md  ch224q-datasheet.md  ch318t-datasheet.md  lt4532b-351mgf-datasheet.md  lt4532b-351mgn-datasheet.md  tps55288-datasheet.md  tps62933-datasheet.md  tvs0500-datasheet.md  urb2405s-3wr3-datasheet.md
docs/desktop/: macos-first-run.md  service-discovery-test-requirements.md
docs/netlist/: ip6557-checklist.md  pcb-netlist-checklist.md  pcb.enet  tps-sw-checklist.md
docs/plan/: README.md
docs/plan/0001:gc9307-normal-ui/: PLAN.md
docs/plan/0002:usb-replug-power-cut/: PLAN.md
docs/plan/0003:wifi-mdns-http/: PLAN.md
docs/plan/0004:github-pages-ports-dashboard/: PLAN.md
docs/plan/0005:device-http-api/: PLAN.md
docs/plan/0006:web-ui-screens-and-theme/: PLAN.md
docs/plan/0007:add-device-discovery/: PLAN.md
docs/plan/0008:tauri-desktop-client/: PLAN.md
docs/plan/0009:desktop-cross-platform-support/: PLAN.md
docs/plan/0010:web-ui-layout-polish/: PLAN.md
docs/plan/0011:desktop-discovery-ci-smoke/: PLAN.md
docs/plan/0012:desktop-persistent-storage/: PLAN.md
docs/plan/0013:ip-scan-lan-autofill/: PLAN.md
docs/plan/0014:actions-speedup/: PLAN.md
docs/plan/0015:desktop-ci-trigger-gating/: PLAN.md
docs/plan/6xrna:ch318-ledd-raw-signal/: PLAN.md
docs/plan/9psha:tps-int-fault-log/: PLAN.md
docs/plan/vqp6v:pcb-v1-2-5v-backlight/: PLAN.md
docs/solutions/firmware/: no-std-shared-core-host-tests.md
docs/solutions/hardware/: ch318t-sideband-startup-power.md  local-usb-runtime-power-timeout-recovery.md  sw2303-tps-cable-compensation-registers.md  sw2303-tps-shared-i2c-startup.md  usb-c-sink-output-verification.md
docs/solutions/networking/: http-listener-pool.md  macos-mdns-ipv6-timeout.md
docs/solutions/web/: operational-device-probe-deadlines.md
docs/spec/: gc9307-normal-ui.md
docs/spec/tools/: gc9307_render_preview.py
docs/specs/: README.md
docs/specs/0001-gc9307-normal-ui/: SPEC.md
docs/specs/3j4df-gc9307-shell-dashboard-ui/: SPEC.md
docs/specs/j9twf-gc9307-normal-ui/: SPEC.md
hardware/ip6557/: netlist.enet
hardware/tps-sw/: netlist.enet
scripts/: check_source_lengths.py  ensure_esp32_port.sh  select_esp32_port.sh
skills/isolapurr-developer-operations/: SKILL.md
skills/isolapurr-maintainer-workflow/: SKILL.md
skills/isolapurr-user-operations/: SKILL.md
src/: idle_bias.rs  lib.rs  mdns.rs  net.rs  power_config.rs  provisioning.rs  spi_device.rs  tca9554.rs  thermal.rs
src/buzzer/: ledc.rs  mod.rs
src/display_ui/: dashboard.rs  dashboard_font.rs  font6x8.rs  icons.rs  menu.rs  mod.rs  normal_ui_policy.rs  surface.rs  usb_c_display.rs
src/net/: http.rs  http_body_parse.inc  http_response.rs  names_config.rs
src/pd_i2c/: allowlist.rs  mod.rs  sw2303.rs  tps55288.rs  types.rs
src/prompt_tone/: manager.rs  mod.rs
src/telemetry/: contract.rs  hardware.rs  i2c_allowlist.rs  mod.rs  normal_ui.rs  sampler.rs
tools/: espflash-runner  hil-sw2303-matrix.sh  mcu-agentd-runner  test-sw2303-host.sh
tools/firmware-bundle/: build-web-bundle.py
tools/firmware-catalog/: build-catalog.py
tools/isolapurr-host/: Cargo.toml
web/: .gitignore  README.md  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/.storybook/: preview.ts  preview.tsx
web/e2e/: app.spec.ts  firmware-flash-probe.spec.ts  light-load-hil.spec.ts  web-serial-hil.spec.ts
web/public/: boot-shell.js
web/scripts/: capture-pwa-screenshots.mjs  check-icons.py  copy-spa-shells.ts  generate-brand-assets.py  generate-icons.mjs  retain-pages-assets.test.ts  retain-pages-assets.ts  test-storybook.ts
web/src/: App.tsx  index.css  main.tsx
(+267 files in other folders)
