[package]
edition = "2024"
name = "isolapurr-usb-hub"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "isolapurr-usb-hub"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1", features = ["defmt", "esp32s3"] }

critical-section = "1"
defmt = "1"
esp-backtrace = { version = "0.18", features = ["defmt", "esp32s3", "panic-handler"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["defmt", "esp32s3"] }
esp-println = { version = "0.16", features = ["defmt-espflash", "esp32s3"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
