[package]
edition = "2024"
name = "isolapurr-usb-hub"
rust-version = "1.88"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[[bin]]
name = "isolapurr-usb-hub"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1", features = ["defmt", "esp32s3"] }

critical-section = "1"
defmt = "1"
embedded-hal = "1"
embedded-graphics-core = "0.4"
gc9307-async = "0.1.1"
ina226 = "0.3.0"
esp-backtrace = { version = "0.18", features = ["defmt", "esp32s3", "panic-handler"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["defmt", "esp32s3"] }
esp-println = { version = "0.16", default-features = false, features = ["esp32s3", "uart", "defmt-espflash"] }
sw2303 = { git = "https://github.com/IvanLi-CN/sw2303-rs", rev = "9b0d8cbd6e47d8cf90fd3c83b0e844f4b54e907f" }
tps55288 = { package = "tps55288-rs", path = "../tps55288-rs" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
