[package]
edition = "2024"
name = "isolapurr-usb-hub"
rust-version = "1.88"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[[bin]]
name = "isolapurr-usb-hub"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1", features = ["defmt", "esp32s3", "rt", "unstable"] }

critical-section = "1"
defmt = "1"
embedded-hal = "1"
embedded-graphics-core = "0.4"
gc9307-async = "0.1.1"
ina226 = "0.3.0"
esp-backtrace = { version = "0.18", features = ["defmt", "esp32s3", "panic-handler"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["defmt", "esp32s3"] }
esp-println = { version = "0.16", default-features = false, features = ["esp32s3", "uart", "defmt-espflash"] }
esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32s3"] }
sw2303 = { git = "https://github.com/IvanLi-CN/sw2303-rs", rev = "9b0d8cbd6e47d8cf90fd3c83b0e844f4b54e907f" }
tps55288 = { package = "tps55288-rs", git = "https://github.com/IvanLi-CN/tps55288-rs", rev = "e451aa816ef97fb08ae162ed2baca414d0b22823" }

# Async runtime (used by Plan #0003 networking + future tasks)
embassy-executor = { version = "0.9", features = ["defmt"] }
embassy-futures = "0.1"
embassy-time = { version = "0.5.0", default-features = false, features = ["defmt"] }

# --- Optional Wi‑Fi + mDNS + HTTP stack (Plan #0003) -----------------------
embassy-net = { version = "0.7.1", default-features = false, features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "multicast",
    "tcp",
    "udp",
], optional = true }
embassy-sync = { version = "0.5", optional = true }
esp-alloc = { version = "0.9.0", optional = true }
esp-radio = { version = "0.17.0", features = ["defmt", "esp32s3", "smoltcp", "unstable", "wifi"], optional = true }
heapless = { version = "0.8", optional = true }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "defmt",
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
    "dns-max-server-count-4",
], optional = true }
static_cell = { version = "2.1", optional = true }

[features]
default = []
net_http = [
    "dep:embassy-net",
    "dep:embassy-sync",
    "dep:esp-alloc",
    "dep:esp-radio",
    "dep:heapless",
    "dep:smoltcp",
    "dep:static_cell",
    "esp-rtos/esp-alloc",
    "esp-rtos/esp-radio",
]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
