[package]
name = "isolapurr-desktop"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
clap = { version = "4.5.27", features = ["derive"] }
directories = "5.0.1"
futures = "0.3.31"
http = "1.2.0"
ipnet = "2.10.1"
mdns-sd = "0.17.1"
mime_guess = "2.0.5"
open = "5.3.2"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tauri = { version = "2.9.5", features = ["tray-icon"] }
time = { version = "0.3.37", features = ["formatting"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"
